--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.kylentt.mediaplayer"
+        applicationId "com.kylentt.musicplayer"
         minSdk 24
         targetSdk 32
         versionCode 1
@@ -60,22 +60,23 @@ android {
         }
     }
 
+    buildFeatures {
+        compose true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
         freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
-    }
-
-    buildFeatures {
-        compose true
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        freeCompilerArgs += "-Xjvm-default=all"
     }
 
     packagingOptions {
@@ -92,143 +93,207 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    namespace 'com.kylentt.mediaplayer'
+    namespace 'com.kylentt.musicplayer'
 }
 
 dependencies {
 
-    // Default
-    dependencies {
-        implementation "androidx.core:core-ktx:1.8.0"
-        implementation "androidx.compose.ui:ui:1.1.1"
-        implementation "androidx.compose.material:material:1.1.1"
-        implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-        implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
-        implementation "androidx.activity:activity-compose:1.5.0"
-        implementation 'com.google.android.material:material:1.6.1'
-        testImplementation "junit:junit:4.13.2"
-        androidTestImplementation "androidx.test.ext:junit:1.1.3"
-        androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-        androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
-        debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    dependencies /* Android.material */ {
+        def v = "1.6.1"
+        implementation "com.google.android.material:material:$v"
     }
 
-    // Accompanist
-    dependencies {
-        def accompanist_Version = "0.24.3-alpha"
-        def navAnimation_Version = "0.24.4-alpha"
-        def pager_Version = "0.24.4-alpha"
-
-        implementation "com.google.accompanist:accompanist-drawablepainter:$accompanist_Version"
-        implementation "com.google.accompanist:accompanist-navigation-animation:$navAnimation_Version"
-        implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_Version"
-        implementation "com.google.accompanist:accompanist-pager:$pager_Version"
-        implementation "com.google.accompanist:accompanist-permissions:$accompanist_Version"
-        implementation "com.google.accompanist:accompanist-placeholder:$accompanist_Version"
-        implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_Version"
+    dependencies /* Androidx.activity */ {
+        def v = "1.5.0"
+        implementation "androidx.activity:activity-compose:$v"
     }
 
-    // Androidx
-    dependencies {
-        def dataStore_Version = "1.0.0"
-        def hiltCompose_Version = "1.0.0"
-        def splashScreen_Version = "1.0.0-rc01"
-        def startup_Version = "1.1.1"
+    dependencies /* Androidx.compose */ {
+        def v = "1.3.0-alpha01"
 
-        implementation "androidx.core:core-splashscreen:$splashScreen_Version"
-        implementation "androidx.datastore:datastore:$dataStore_Version"
-        implementation "androidx.hilt:hilt-navigation-compose:$hiltCompose_Version"
-        implementation "androidx.startup:startup-runtime:$startup_Version"
+        // Core UI
+        implementation "androidx.compose.ui:ui:$v"
+        implementation "androidx.compose.ui:ui-tooling-preview:$v"
+
+        // Foundation
+        implementation "androidx.compose.foundation:foundation:$v"
+
+        // Material
+        implementation "androidx.compose.material:material:$v"
+        implementation "androidx.compose.material:material-icons-core:$v"
+        implementation "androidx.compose.material:material-icons-extended:$v"
+
+        // Material3
+        def vMaterial3 = "1.0.0-alpha14"
+        implementation "androidx.compose.material3:material3:$vMaterial3"
+
+        // Debug
+        debugImplementation "androidx.compose.ui:ui-tooling:$v"
     }
 
-    // Androidx.compose
-    dependencies {
-        def composeMaterial_Version = "1.3.0-alpha01"
-        def composeMaterial3_Version = "1.0.0-alpha14"
-        def composeMaterialIcon_Version = "1.3.0-alpha01"
+    dependencies /* Androidx.concurrent */ {
 
-        implementation "androidx.compose.foundation:foundation:$composeMaterial_Version"
-        implementation "androidx.compose.material:material-icons-core:$composeMaterialIcon_Version"
-        implementation "androidx.compose.material:material-icons-extended:$composeMaterial_Version"
-        implementation "androidx.compose.material3:material3:$composeMaterial3_Version"
-
+        // Futures
+        def vFutures = "1.1.0"
+        implementation "androidx.concurrent:concurrent-futures:$vFutures"
     }
 
-    // Androidx.navigation
-    dependencies {
-        def composeNavigation_Version = "2.5.0"
-        implementation "androidx.navigation:navigation-compose:$composeNavigation_Version"
+    dependencies /* Androidx.core */ {
+        def vKTX = "1.8.0"
+        def vSplashScreen = "1.0.0-rc01"
+
+        implementation "androidx.core:core-ktx:$vKTX"
+        implementation "androidx.core:core-splashscreen:$vSplashScreen"
     }
 
-    // Androidx.Room
-    dependencies {
-        def room_Version = "2.4.2"
+    dependencies /* Androidx.datastore */ {
+        def v = "1.0.0"
 
-        implementation "androidx.room:room-runtime:$room_Version"
-        implementation "androidx.room:room-ktx:$room_Version"
-        kapt "androidx.room:room-compiler:$room_Version"
+        implementation "androidx.datastore:datastore:$v"
     }
 
-    // Coroutines
-    dependencies {
-        implementation("com.google.guava:guava:31.0.1-android")
-        implementation("androidx.concurrent:concurrent-futures:1.1.0")
-        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.6.1")
+    dependencies /* Androidx.hilt */ {
+        def v = "1.0.0"
+        implementation "androidx.hilt:hilt-navigation-compose:$v"
     }
 
-    // Debugging
-    dependencies {
-        def timber_Version = "5.0.1"
-        def leakCanary_Version = "2.9.1"
-
-        implementation "com.jakewharton.timber:timber:$timber_Version"
-        debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary_Version"
+    dependencies /* Androidx.lifecycle */ {
+        def v = "2.6.0-alpha01"
+        implementation "androidx.lifecycle:lifecycle-runtime-ktx:$v"
     }
 
-    // Dagger-Hilt
-    dependencies {
-        def daggerHilt_version = "2.41"
-
-        implementation "com.google.dagger:hilt-android:$daggerHilt_version"
-        kapt "com.google.dagger:hilt-android-compiler:$daggerHilt_version"
+    dependencies /* Androidx.media3 */ {
+        def v = "1.0.0-beta01"
+        implementation "androidx.media3:media3-exoplayer:$v"
+        implementation "androidx.media3:media3-session:$v"
+        implementation "androidx.media3:media3-common:$v"
+        implementation "androidx.media3:media3-ui:$v"
     }
 
-    // KotlinX
-    dependencies {
-        def serialization_Version = "1.3.2"
+    dependencies /* Androidx.navigation */ {
 
-        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_Version"
+        // Compose
+        def vCompose = "2.5.0"
+        implementation "androidx.navigation:navigation-compose:$vCompose"
     }
 
-    // Media
-    dependencies {
-        def media3_version = "1.0.0-beta01"
-        def exoplayer_version = "2.18.0"
-        def jaudiotagger_version = "2.3.15"
+    dependencies /* Androidx.Room */ {
+        def v = "2.4.2"
 
-        implementation "androidx.media3:media3-exoplayer:$media3_version"
-        implementation "androidx.media3:media3-session:$media3_version"
-        implementation "androidx.media3:media3-common:$media3_version"
-        implementation "androidx.media3:media3-ui:$media3_version"
-        implementation "com.google.android.exoplayer:extension-mediasession:$exoplayer_version"
-        implementation "com.github.Adonai:jaudiotagger:$jaudiotagger_version"
-
+        implementation "androidx.room:room-runtime:$v"
+        implementation "androidx.room:room-ktx:$v"
+        kapt "androidx.room:room-compiler:$v"
     }
 
-    // Image Loading
-    dependencies {
-        def coil_Version = "1.4.0"
-
-        /*
-        1.0.6 Missing transition property on [coil.request.*RequestOptions],
-        called from [coil.compose.ImagePainterKt.updatePainter()]
-        */
-        def coilTransformer_Version = "1.0.5"
-
-        implementation "io.coil-kt:coil:$coil_Version"
-        implementation "io.coil-kt:coil-compose:$coil_Version"
-        implementation "jp.wasabeef.transformers:coil:$coilTransformer_Version"
-        implementation "jp.wasabeef.transformers:coil-gpu:$coilTransformer_Version"
+    dependencies /* Androidx.startup */ {
+        def v = "1.1.1"
+        implementation "androidx.startup:startup-runtime:$v"
     }
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+
+    dependencies /* coil-kt */ {
+        def v = "1.4.0"
+        implementation "io.coil-kt:coil:$v"
+        implementation "io.coil-kt:coil-compose:$v"
+    }
+
+    dependencies /* Github.Adonai */ {
+
+        // JAudioTagger
+        def vJAudioTagger = "2.3.15"
+        implementation "com.github.Adonai:jaudiotagger:$vJAudioTagger"
+    }
+
+    dependencies /* Google.accompanist */ {
+        def v = "0.24.3-alpha"
+        implementation "com.google.accompanist:accompanist-drawablepainter:$v"
+        implementation "com.google.accompanist:accompanist-navigation-material:$v"
+        implementation "com.google.accompanist:accompanist-permissions:$v"
+        implementation "com.google.accompanist:accompanist-placeholder:$v"
+        implementation "com.google.accompanist:accompanist-systemuicontroller:$v"
+
+        // Pager
+        def vPager = "0.24.4-alpha"
+        implementation "com.google.accompanist:accompanist-pager:$vPager"
+
+        // Navigation-Animation
+        def vNavAnimation = "0.24.4-alpha"
+        implementation "com.google.accompanist:accompanist-navigation-animation:$vNavAnimation"
+    }
+
+    dependencies /* Google.android */ {
+
+        // Exoplayer
+        def vExoPlayer = "2.18.0"
+        implementation "com.google.android.exoplayer:extension-mediasession:$vExoPlayer"
+    }
+
+    dependencies /* Google.dagger */ {
+
+        // Hilt-Android
+        def vHiltAndroid = "2.41"
+        implementation "com.google.dagger:hilt-android:$vHiltAndroid"
+        kapt "com.google.dagger:hilt-android-compiler:$vHiltAndroid"
+    }
+
+    dependencies /* Google.guava */ {
+        def v = "31.0.1-android"
+        implementation "com.google.guava:guava:$v"
+    }
+
+    dependencies /* Instrumentation Test */ {
+
+        // JUnit
+        def vJUnitExt = "1.1.3"
+        def vJUnit4Compose = "1.1.1"
+        androidTestImplementation "androidx.test.ext:junit:$vJUnitExt"
+        androidTestImplementation "androidx.compose.ui:ui-test-junit4:$vJUnitExt"
+
+        // Espresso
+        def vEspressoCore = "3.4.0"
+        androidTestImplementation "androidx.test.espresso:espresso-core:$vEspressoCore"
+    }
+
+    dependencies /* JakeWharton.timber */ {
+        def v = "5.0.1"
+        implementation "com.jakewharton.timber:timber:$v"
+    }
+
+    dependencies /* Jetbrains.kotlin */ {
+
+        // reflect
+        def vReflect = "1.7.10"
+        implementation "org.jetbrains.kotlin:kotlin-reflect:$vReflect"
+    }
+
+    dependencies /* Jetbrains.kotlinx */ {
+
+        // Coroutines-Guava
+        def vCoroutines_Guava = "1.6.1"
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-guava:$vCoroutines_Guava"
+
+        // Serialization-Json
+        def vSerialization_Json = "1.3.2"
+        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$vSerialization_Json"
+    }
+
+    dependencies /* SquareUp.leakcanary */ {
+        def v = "2.9.1"
+        debugImplementation "com.squareup.leakcanary:leakcanary-android:$v"
+    }
+
+    dependencies /* Unit Test */ {
+        def v = "4.13.2"
+
+        // JUnit
+        testImplementation "junit:junit:$v"
+    }
+
+    dependencies /* wasabeef.transformers*/ {
+        // Coil
+        /* 1.0.6 Missing transition property on [coil.request.*RequestOptions],
+        called from [coil.compose.ImagePainterKt.updatePainter()] */
+        def vCoil = "1.0.5"
+        implementation "jp.wasabeef.transformers:coil:$vCoil"
+        implementation "jp.wasabeef.transformers:coil-gpu:$vCoil"
+    }
 }
