--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         </activity>
 
         <activity
-            android:name=".ui.external.activity.ReceiverActivity"
+            android:name="com.kylentt.mediaplayer.ui.external.activity.ReceiverActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen">
             <intent-filter>
