--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:authorities="${applicationId}.androidx-startup"
             android:exported="false">
             <meta-data
-                android:name="com.kylentt.musicplayer.core.app.dependency.AppInitializer"
+                android:name="com.kylentt.musicplayer.core.app.startup.AppInitializer"
                 android:value="androidx.startup"/>
         </provider>
 
@@ -44,6 +44,7 @@
             android:name="com.kylentt.musicplayer.ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen"
+            android:screenOrientation="portrait"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,6 +55,7 @@
         <activity
             android:name="com.kylentt.musicplayer.ui.receiver.ReceiverActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.App.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
