--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-FILE_PATH = [ Path to KeyStore.jks ]
-PASSWORD = [ Password ]
-KEY_ALIAS = [ Key Alias ]
-KEY_PASSWORD = [ Key Password ]
+FILE_PATH = C:\\Users\\Kyle\\dev\\Android Studio\\key\\testRelease-key.jks
+PASSWORD = 123456
+KEY_ALIAS = key0
+KEY_PASSWORD = 123456
