--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@
 /.idea/misc.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
 /captures
 .externalNativeBuild
 .cxx
@@ -25,7 +24,7 @@ keystore.properties
 *.dex
 *.class
 .gradle/
-build/
 .signing/
 *.log
 /.idea/
+/build/
