--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     </queries>
 
     <application
-        android:name="com.flammky.musicplayer.MusicPlayerApp"
+        android:name="com.flammky.musicplayer.KlioApp"
         android:allowBackup="true"
         android:exported="true"
         android:icon="@mipmap/ic_launcher_blu_dark"
